#List the files in "apps" and if there are directories, add them to the list of (potential) test programs
MESSAGE("apps")
FILE(GLOB DIRLIST * )

FOREACH(APPDIR ${DIRLIST})
    IF(IS_DIRECTORY ${APPDIR})
	# AudioGarden
	IF ("${APPDIR}" MATCHES "audiogarden-osg-qt")
		IF (USE_AUDIOGARDEN)
			MESSAGE("Building app: "${APPDIR})
			ADD_SUBDIRECTORY(${APPDIR})
		ELSE ()
			MESSAGE("Not building app: "${APPDIR})
		ENDIF()
	ELSEIF ("${APPDIR}" MATCHES "audiocycle-osg-ipad")
		IF ( APPLE_IOS_DEV OR APPLE_IOS_SIM OR APPLE_IOS_XCODE )
        		MESSAGE("Building app: " ${APPDIR})
			ADD_SUBDIRECTORY(${APPDIR})
		ENDIF()
	ELSE ()
		IF ( APPLE_IOS_DEV OR APPLE_IOS_SIM OR APPLE_IOS_XCODE )
		ELSE()
        		MESSAGE("Building app: " ${APPDIR})
        		ADD_SUBDIRECTORY(${APPDIR})
		ENDIF()

	ENDIF ()
    ENDIF()
ENDFOREACH()
