FILE(GLOB SRC *.cpp *.c)
FILE(GLOB HDR *.hpp *.h)

IF ( USE_OPENAL )
	MESSAGE("AudioEngine enabled")
	INCLUDE_DIRECTORIES(. ../tinyxml)
	ADD_LIBRARY(audioengine STATIC ${SRC} ${HDR})
	ADD_DEPENDENCIES(audioengine mediacycle)
	TARGET_LINK_LIBRARIES(audioengine mediacycle)
	IF ( NOT APPLE )
		TARGET_LINK_LIBRARIES(audioengine ${OPENAL_LIBRARY} pthread)#${ALUT_LIBRARY}
		IF ( WIN32 )
			TARGET_LINK_LIBRARIES(audioengine ws2_32)
		ENDIF ( WIN32 )
	ELSE ( NOT APPLE )
		TARGET_LINK_LIBRARIES(audioengine ${OPENAL_LIBRARY})
	ENDIF ( NOT APPLE )
ENDIF ( USE_OPENAL )
