IF(USE_OPENAL AND SUPPORT_AUDIO)
	FILE(GLOB SRC *.cpp *.c)
	FILE(GLOB HDR *.hpp *.h)

	INCLUDE_DIRECTORIES(. ../tinyxml)
	ADD_LIBRARY(audioengine STATIC ${SRC} ${HDR})
	ADD_DEPENDENCIES(audioengine mediacycle)
	TARGET_LINK_LIBRARIES(audioengine mediacycle)
	IF ( NOT APPLE )
		TARGET_LINK_LIBRARIES(audioengine ${OPENAL_LIBRARY} pthread)
		IF ( WIN32 )
			TARGET_LINK_LIBRARIES(audioengine ws2_32)
		ENDIF ( WIN32 )
	ELSE ( NOT APPLE )
		TARGET_LINK_LIBRARIES(audioengine ${OPENAL_LIBRARY})
	ENDIF ( NOT APPLE )
	MESSAGE("[X] audioengine")
ELSEIF ( USE_PORTAUDIO AND SUPPORT_AUDIO)
		MESSAGE("AudioEngine enabled")
		INCLUDE_DIRECTORIES(. ../tinyxml)
		ADD_LIBRARY(audioengine STATIC ${SRC} ${HDR})
		ADD_DEPENDENCIES(audioengine mediacycle)
		TARGET_LINK_LIBRARIES(audioengine mediacycle ${PORTAUDIO_LIBRARIES} pthread)
		IF ( WIN32 )
			TARGET_LINK_LIBRARIES(audioengine ws2_32)
		ENDIF ()
	MESSAGE("[X] audioengine")
ELSE()
	MESSAGE("[ ] audioengine")
ENDIF()
